# monopypi

./: README.md  pyproject.toml
src/monopypi/: app.py  build.py  config.py  find.py  state.py
